Resolves #8 (mostly) with a data-tulito-panegap="full" that allows hidden panes to be full screen, and an example of scrollable cards via the bottom pane. Even with its shortcomings, this is probably the best card pattern for this project. Also added index.less to try and manage some of the complexity creeping in to index.css. Needs quite a bit of cleanup. Also resolving #5 because I've decided the way to resolve iscroll snapping is to provide strict scrollable width with an snapStep parameter.

--- a/src/css/index.less
+++ b/src/css/index.less
@@ -1,16 +1,15 @@
-/*! index.css
+/*! index.less
  * http://tulito.org
  *
  * Copyright (c) 2013-2014 Danny Brian <danny@brians.org>;
  * Licensed under the Apache 2 license */
 
-/*
-	This CSS contains default styles for tulito.
-*/
-
 /* local copy of fonts
   @import url(fonts.css);
 */
+
+@screenWidth: 320px;  /* the width of the screen, changed automatically by tulito */
+@screenHeight: 960px; /* the height of the screen, changed automatically by tulito */
 
 body {
   background-color: #363535;
@@ -20,7 +19,6 @@ body {
   width: 100%;
   color: #fff;
   letter-spacing: 2px;
-
 }
 
 .app {
@@ -104,6 +102,62 @@ a:visited, a:active, a:hover {
 	color: #fff;
 }
 
+[data-tulito-class="back-pane"]
+{
+	ul {
+		list-style: none;
+		padding:0;
+		margin:0;
+		width:100%;
+	}
+	li {
+		padding: 0 10px;
+		height: 38px;
+		line-height:40px;
+		border-bottom: 1px solid #222;
+		background-color: #3a3a3a;
+		font-size: 1.3rem;
+		color: #bbb;
+		font-weight: 600;
+		&.active {
+			background-color: #444444;
+		}
+		&:active {
+			background-color: #444444;
+		}
+	}
+	ul > ul > li {
+		font-weight: 400;
+		font-size: 1.3rem;
+		background-color: #2c2c2c;
+	}
+	
+	ul.right {
+		text-align:right;
+	}
+	ul.right > ul > li {
+		background-color: #fafafa;
+	}
+	ul.right li {
+		background-color: #ededed;
+		border-bottom: 1px solid #ededed;
+		font-size: 1.3rem;
+		color: #444;
+		&.active {
+			background-color: #999;
+		}
+		&:active {
+			background-color: #999;
+		}
+	}
+	ul.right > li {
+		color: #888;
+		font-weight: 600;
+		text-transform: uppercase;
+		letter-spacing: 2px;
+	}
+}
+
 .hscroller-cont {
 	margin-top: 14px;
 	margin-bottom: 14px;
@@ -114,10 +168,10 @@ a:visited, a:active, a:hover {
 }
 
 .hscroller-cont.huge {
-	margin-top: 10%;
-	margin-bottom: 10%;
+	margin-top: 8%;
+	margin-bottom: 8%;
 	z-index: 1;
-	height: 80%;
+	height: 100%;
 	width: 100%;
 	overflow: hidden;
 }
@@ -146,8 +200,8 @@ a:visited, a:active, a:hover {
 }
 
 .hscroller.huge {
-	width: 10000px; /* This needs to be accurate to the intended contents, including margins of the li's */
-	height: 90%;
+	width: ((@screenWidth - 100 + 29) * 21); /* This needs to be accurate to the intended contents, including margins of the li's */
+	height: (@screenHeight * 0.8);
 }
 
 .hscroller ul {
@@ -188,19 +242,20 @@ a:visited, a:active, a:hover {
 }
 
 .hscroller.huge li {
-	width: 300px;
-	height: 90%;
-	line-height: 400px;
-	margin-left: 20px;
+	width: (@screenWidth - 100);
+	height: 100%;
+	line-height: (@screenHeight * 0.9);
+	margin-left: 26px;
 	float: left;
-	background-color: none;
-	font-size: 20px;
+	background-color: #F2EFD8;
+	font-size: 60px;
 	text-align: center;
-	color: rgba(100,100,100,0.2);
-	-webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-	font-size: 200px;
+	-webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+	i {
+		color: #666;
+	}
 }
 
 
@@ -357,4 +412,5 @@ a:visited, a:active, a:hover {
 	 display: none;
   }
 }
+
 
